# vk-replier-bot

./: .gitignore  CMakeLists.txt  New requirements.odt  README.md  Requirements.odt  Requirements.txt  config.json  recompile.sh
src/: BlocksTable.hpp  CMakeLists.txt  ConfigReader.cpp  ConfigReader.hpp  JsonUtils.cpp  JsonUtils.hpp  TargetsTable.cpp  TargetsTable.hpp  main  main.cpp
src/ApiRequests/: ApiRequests.cpp  ApiRequests.hpp  BaseRequest.cpp  BaseRequest.hpp  Exceptions.cpp  Exceptions.hpp  MessagesSendRequest.cpp  MessagesSendRequest.hpp  Utils.hpp
src/BotTypes/: Chats.hpp  TargetsTable.cpp  TargetsTable.hpp
src/Business logic/: BusinessLogic.cpp  BusinessLogic.hpp  ConfigReader.cpp  ConfigReader.hpp
src/BusinessLogic/: BusinessLogic.cpp  BusinessLogic.hpp  Conditions.hpp  ConfigConditions.cpp  ConfigConditions.hpp  ConfigHolder.cpp  ConfigHolder.hpp  ConfigOperations.cpp  ConfigOperations.hpp  ConfigReader.cpp  ConfigReader.hpp
src/BusinessLogic/ConfigTypes/: Chats.hpp  SimpleTypes.cpp  SimpleTypes.hpp  TargetsContainer.cpp  TargetsContainer.hpp  TargetsTable.cpp  TargetsTable.hpp
src/Event/: Event.cpp  Event.hpp  EventTypes.hpp  EventUtils.hpp  Utils.cpp  Utils.hpp
src/Event/EventObjects/: EventObject.hpp  NewMessage.cpp  NewMessage.hpp
src/General utils/: Result.hpp
src/GeneralUtils/: JsonUtils.hpp  Result.cpp  Result.hpp
src/Logging/: Logger.cpp  Logger.hpp  LoggerBoostImpl.cpp  LoggerBoostImpl.hpp  easylogging++.cc
src/MessageProcessing/: ArgsExtractor.cpp  ArgsExtractor.hpp  Commands.hpp  CommandsPool.cpp  CommandsPool.hpp  EventProcessingStrategy.cpp  EventProcessingStrategy.hpp  MessageProcessing.cpp  MessageProcessing.hpp  MsgUtils.cpp  MsgUtils.hpp  TagsCmdsProcessingStrategy.cpp  TagsCmdsProcessingStrategy.hpp  TagsPool.cpp  TagsPool.hpp  Utils.cpp  Utils.hpp
src/MessageProcessing/Commands/: ChangeMode.cpp  ChangeModeCommand.cpp  ChangeModeCommand.hpp  Commands.hpp  DelChecker.cpp  DelChecker.hpp  DelSource.cpp  DelSource.hpp  DelSourceCommand.cpp  DelSourceCommand.hpp  DelTarget.cpp  DelTargetByNum.cpp  DelTargetByNum.hpp  DelTargetByNumCommand.cpp  DelTargetByNumCommand.hpp  DelTargetCommand.cpp  DelTargetCommand.hpp  RegChecker.cpp  RegChecker.hpp  RegGodlike.cpp  RegGodlike.hpp  RegGodlikeCommand.cpp  RegGodlikeCommand.hpp  RegSource.cpp  RegSource.hpp  RegSourceCommand.cpp  RegSourceCommand.hpp  RegTarget.cpp  RegTarget.hpp  RegTargetCommand.cpp  RegTargetCommand.hpp  Status.cpp  Status.hpp  StatusCommand.cpp  StatusCommand.hpp
src/MessageProcessing/Interfaces/: CommandI.hpp  TagI.hpp  TextTriggerI.cpp  TextTriggerI.hpp
src/MessageProcessing/Tags/: AllImportantTag.cpp  AllImportantTag.hpp  AllTag.cpp  AllTag.hpp  TagAll.cpp  TagAll.hpp  TagAllImportant.cpp  TagAllImportant.hpp
src/NewMessageProcessing/: ArgsExtractor.cpp  ArgsExtractor.hpp  CommandI.hpp  Commands.hpp  CommandsPool.cpp  CommandsPool.hpp  EventProcessingStrategy.cpp  EventProcessingStrategy.hpp  NewUtils.cpp  NewUtils.hpp  TagI.hpp  Tags.hpp  TagsPool.cpp  TagsPool.hpp  TextTrigger.hpp  TextTriggerI.hpp  Utils.cpp
src/NewMessageProcessing/Commands/: ChangeMode.cpp  ChangeMode.hpp  ChangeModeCommand.cpp  ChangeModeCommand.hpp  DelSourceCommand.cpp  DelSourceCommand.hpp  DelTarget.hpp  DelTargetByNum.cpp  DelTargetByNumCommand.cpp  DelTargetByNumCommand.hpp  DelTargetCommand.cpp  DelTargetCommand.hpp  RegGodlike.cpp  RegGodlikeCommand.cpp  RegGodlikeCommand.hpp  RegSource.cpp  RegSourceCommand.cpp  RegSourceCommand.hpp  RegTargetCommand.cpp  RegTargetCommand.hpp  StatusCommand.cpp  StatusCommand.hpp
src/NewMessageProcessing/Interfaces/: TagI.hpp  TextTriggerI.cpp  TextTriggerI.hpp
src/NewMessageProcessing/Tags/: AllImportantTag.cpp  AllImportantTag.hpp  AllTag.cpp  AllTag.hpp  TagAll.cpp  TagAllImportant.cpp  Tags.hpp
src/Objects/: Message.cpp  Message.hpp
src/Server/: EventProcessingStrategyI.hpp  Server.cpp  Server.hpp
src/VkApi/: Exceptions.hpp  GeneralTypes.hpp
src/VkApi/Callback/Event/: Event.cpp  Event.hpp  EventTypes.hpp  Utils.cpp  Utils.hpp
src/VkApi/Callback/Event/EventObjects/: EventObject.hpp  NewMessage.cpp  NewMessage.hpp
src/VkApi/Objects/: Message.cpp  Message.hpp
src/VkApi/Requests/: BaseRequest.cpp  BaseRequest.hpp  Init.cpp  Init.hpp  Utils.hpp
src/VkApi/Requests/Messages/: MessagesGetByConversationMessageIdRequest.cpp  MessagesGetByConversationMessageIdRequest.hpp  MessagesSendRequest.cpp  MessagesSendRequest.hpp
src/VkApi/Responses/Messages/: MessagesGetByConversationMessageIdResponse.cpp  MessagesGetByConversationMessageIdResponse.hpp
test/: server.py  test.py
test/jsons/bad/: 3.json  4.json
test/jsons/message_new/bad/: 1.json  2.json  3.json  4.json  5.json
test/jsons/message_new/good/: 1.json  2.json  3.json  4.json  5.json
test/jsons/registration/trace1/: 1.json  10.json  11.json  12.json  14.json  15.json  16.json  17.json  18.1.json  19.json  2.json  20.json  22.1.json  22.json  23.json  24.json  25.json  26.1.json  26.2.json  26.json  27.json  28.json  29.1.json  29.2.json  3.json  30.0.json  30.1.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  40.json  41.json  42.5.json  42.6.json  42.json  (+11 more)
test/jsons/unsuported_type/: 1.json
